# MPIPlatform

./: CMakeLists.txt  README.md  install.sh
data/: compress_data.sh  split_data.c  upload_install_split.sh
src/: defines.h  main.cpp  run.h
src/Datapoint/: ARMADatapoint.h  Datapoint.h  PCADatapoint.h
src/Gradient/: Gradient.h
src/Layer/: Layer.h
src/Model/: FCNModel.h  LOGISTICL2L1Model.h  LSL2L1Model.h  MULTICLASSTRACEModel.h  Model.h  PCAModel.h
src/Tools/: Tools.h
src/Trainer/: DecoupledServerTrainer.h  DecoupledWorkerTrainer.h  DistServerTrainer.h  DistWorkerTrainer.h  ServerTrainer.h  Trainer.h  WorkerTrainer.h
src/Updater/: DFSDCAUpdater.h  DisSVRGUpdater.h  SGDUpdater.h  SVRGUpdater.h  Updater.h
